partial/force-app/main/default/objects/Salesperson_Record__c/Salesperson_Record__c.object-meta.xml
<CustomObject>
    <label>Salesperson Record</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesperson Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>