partial/force-app/main/default/objects/Salesperson_Record__c/fields/CPDCredits_P1__c.field-meta.xml
<CustomField>
    <fullName>CPDCredits_P1__c</fullName>
    <label>CPD Credits - P1</label>
    <summarizedField>CPD_Course_Certificate__c.CPD_Credits_Attained__c</summarizedField>
    <summaryFilterItems>
        <field>CPD_Course_Certificate__c.CPD_CourseType__c</field>
        <operation>equals</operation>
        <value>P1</value>
    </summaryFilterItems>
    <summaryForeignKey>CPD_Course_Certificate__c.Salesperson_Record__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>