partial/force-app/main/default/objects/Salesperson_Record__c/fields/CPDCredits_Professional__c.field-meta.xml
<CustomField>
    <fullName>CPDCredits_Professional__c</fullName>
    <formula>CPDCredits_P1__c + CPDCredits_P2__c + CPDCredits_P3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPD Credits - Professional Competencies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>