partial/force-app/main/default/objects/Salesperson_Record__c/fields/CPDCredits_Total__c.field-meta.xml
<CustomField>
    <fullName>CPDCredits_Total__c</fullName>
    <formula>CPDCredits_Generic__c + CPDCredits_Professional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CPD Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>