partial/force-app/main/default/objects/Salesperson_Record__c/fields/CPDStatus_Generic__c.field-meta.xml
<CustomField>
    <fullName>CPDStatus_Generic__c</fullName>
    <formula>IF(
    CPDCredits_Generic__c &gt;=2,
    IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),
    IF(
        CPDCredits_Generic__c &gt;=1,
        IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),
        IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Two credits must be from courses related to Generic Competencies.</inlineHelpText>
    <label>CPD Status - Generic Competency</label>
    <type>Text</type>
</CustomField>