partial/force-app/main/default/objects/Salesperson_Record__c/fields/CPDStatus_Professional__c.field-meta.xml
<CustomField>
    <fullName>CPDStatus_Professional__c</fullName>
    <formula>IF(
    CPDCredits_Professional__c &gt;=4,
    IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),
    IF(
        CPDCredits_Professional__c &gt;=1,
        IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),
        IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Four of these credits must be from courses related to Professional Competencies.</inlineHelpText>
    <label>CPD Status - Professional Competencies</label>
    <type>Text</type>
</CustomField>