partial/force-app/main/default/objects/Salesperson_Record__c/fields/YearFilter__c.field-meta.xml
<CustomField>
    <fullName>YearFilter__c</fullName>
    <formula>IF(
    TEXT(YEAR(TODAY())) = Year__c,
    &quot;This FY&quot;,
    IF(
        TEXT(YEAR(TODAY()) - 1) = Year__c,
        &quot;Last FY&quot;,
        IF(
            TEXT(YEAR(TODAY()) + 1) = Year__c,
            &quot;Next FY&quot;,
            NULL
        )   
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Filter</label>
    <type>Text</type>
</CustomField>