partial/force-app/main/default/objects/Salesperson_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Year__c</columns>
    <columns>CPDCredits_Professional__c</columns>
    <columns>CPDStatus_Professional__c</columns>
    <columns>CPDCredits_Generic__c</columns>
    <columns>CPDStatus_Generic__c</columns>
    <columns>CPDCredits_Total__c</columns>
    <columns>YearFilter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>