partial/force-app/main/default/objects/Salesperson_Record__c/listViews/Last_FY.listView-meta.xml
<ListView>
    <fullName>Last_FY</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Year__c</columns>
    <columns>CPDCredits_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>YearFilter__c</field>
        <operation>equals</operation>
        <value>Last FY</value>
    </filters>
    <label>Last FY</label>
</ListView>